codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_loading_state.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Плагины
  Загружаю список плагинов...
  Пока показывается только маркетплейс ChatGPT.

›    Загрузка плагинов...  Список обновится, когда маркетплейс ответит.
