codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_search_filtered.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Плагины
  Просматривайте плагины из доступных маркетплейсов.
  Установлено 0 из 3 доступных плагинов.

  sla
› Slack  Доступен  Enter открывает карточку плагина.

  Esc закрывает окно.
