codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Лимиты почти исчерпаны
  Переключиться на gpt-5.1-codex-mini, чтобы тратить меньше кредитов?

› 1. Переключиться на gpt-5.1-codex-mini  Упор на скорость и цену: отвечает
                                           быстрее и дешевле, но слабее на
                                           тяжёлых задачах.
  2. Оставить текущую модель
  3. Оставить текущую модель и больше не   Скрыть будущие напоминания о смене
     напоминать                            модели из-за лимитов.

  Нажмите enter для подтверждения или esc для возврата
