codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_audio_selection_popup_narrow.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Голос и звук
  Настройте микрофон и вывод для голосового режима.

  Найти настройку звука
  ← Назад в настройки  Вернуться к общим настройкам
                       модели, профилей и команд.
› Микрофон            Сейчас используется: По
                       умолчанию в системе
  Вывод звука         Сейчас используется: По
                       умолчанию в системе

  Нажмите enter для подтверждения или esc для возврата
