codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_microphone_picker_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Устройство: Микрофон
  Сохранённый выбор влияет только на голосовой режим.

  Найти устройство: Микрофон
  ← Назад к голосу и звуку                       Вернуться к выбору микрофона
                                                 и вывода для голосового
                                                 режима.
  По умолчанию в системе                         Использовать устройство,
                                                 которое сейчас выбрано в
                                                 системе.
› Недоступно: Studio Mic (текущий) (недоступно)  Сохранённое устройство сейчас
                                                 не видно системе. (недоступно:
                                                 Подключите его снова или
                                                 выберите другой вариант.)
  Built-in Mic
  USB Mic

  Нажмите enter для подтверждения или esc для возврата
